--- a/Bcss.css
+++ b/Bcss.css
@@ -3,6 +3,17 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    
+}
+
+body, html {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+
+    /* Add text-size-adjust for modern browsers */
+    text-size-adjust: 100%; /* Ensures text does not auto-scale on mobile devices */
+
+    /* Old way for Internet Explorer (optional) */
     -ms-text-size-adjust: 100%;
 }
 
