--- a/Bcss.css
+++ b/Bcss.css
@@ -6,6 +6,12 @@ body {
     
 }
 
+html {
+    font-family: sans-serif;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
 body, html {
     font-family: Arial, sans-serif;
     font-size: 16px;
